# Principia-Automatica

./: LICENSE  NOSFERA_Codex.md  README.md  requirements.txt
paper-01-spectral-geometry/: paper_1.tex
paper-01-spectral-geometry-sprowls/: paper_1_sprowls.tex  references.bib
paper-01-spectral-geometry-sprowls/data/: dummy_reddit.csv
paper-01-spectral-geometry-sprowls/results/20ng/: bertopic_topics.txt  hsm_topics.txt  lda_topics.txt  spectral_embedding.npy
paper-01-spectral-geometry-sprowls/scripts/: benchmarker.py  data_loader.py  run_experiment.py  spectral_analyzer.py  visualizer.py
paper-01-spectral-geometry/data/: .gitignore
paper-01-spectral-geometry/notebooks/: 01-Exploration-and-Visualization.ipynb
paper-01-spectral-geometry/results/: discovered_labels.npy  discovered_topics.txt  spectral_embedding.npy
paper-01-spectral-geometry/scripts/: paper1_analyze.py  paper1_preprocess.py  paper1_visualize.py
papers/: PA-03_libCognito.md
principia-semantica/: .gitignore  README.md  principia_semantica_dissertation.tex  pyproject.toml  requirements.txt
principia-semantica/cpp_backend/: CMakeLists.txt
principia-semantica/cpp_backend/src/: main.cpp
principia-semantica/docker/: Dockerfile
principia-semantica/experiments/: run_20newsgroups_experiment.py  run_ablation_study.py  run_final_experiment.py  run_pca_wavelet_experiment.py  run_pipeline_test.py
principia-semantica/principia_semantica/: __init__.py  analysis.py  curvature.py  decomposition.py  scaffolding.py  utils.py  visualizer.py  wavelets.py
